tests/snapshots/snapshots__budget_debug_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1025 words)

browser.js
   115→function useColors() {
   116→	// NB: In an Electron preload script, document will be defined but not fully
   117→	// initialized. Since we know we're in Chrome, we'll just detect this case
   118→	// explicitly
   119→	if (typeof window !== 'undefined' && window.process && (window.process.type === 'renderer' || window.process.__nwjs)) {
   120→		return true;
   121→	}
   122→
   123→	// Internet Explorer and Edge do not support colors.
   124→	if (typeof navigator !== 'undefined' && navigator.userAgent && navigator.userAgent.toLowerCase().match(/(edge|trident)\/(\d+)/)) {
   125→		return false;
   126→	}
   127→
   128→	let m;
   129→
   130→	// Is webkit? http://stackoverflow.com/a/16459606/376773
   131→	// document is undefined in react-native: https://github.com/facebook/react-native/pull/1632
   132→	// eslint-disable-next-line no-return-assign
   133→	return (typeof document !== 'undefined' && document.documentElement && document.documentElement.style && document.documentElement.style.WebkitAppearance) ||
   134→		// Is firebug? http://stackoverflow.com/a/398120/376773
   135→		(typeof window !== 'undefined' && window.console && (window.console.firebug || (window.console.exception && window.console.table))) ||
   136→		// Is firefox >= v31?
   137→		// https://developer.mozilla.org/en-US/docs/Tools/Web_Console#Styling_messages
      →…
   143→/**
   144→ * Colorize log arguments if enabled.
   145→ *
   146→ * @api public
   147→ */
   148→
   149→function formatArgs(args) {
   150→	args[0] = (this.useColors ? '%c' : '') +
   151→		this.namespace +
   152→		(this.useColors ? ' %c' : ' ') +
   153→		args[0] +
   154→		(this.useColors ? '%c ' : ' ') +
   155→		'+' + module.exports.humanize(this.diff);
   156→
   157→	if (!this.useColors) {
   158→		return;
   159→	}
   160→
   161→	const c = 'color: ' + this.color;
   162→	args.splice(1, 0, c, 'color: inherit');
   163→
   164→	// The final "%c" is somewhat tricky, because there could be other
   165→	// arguments passed either before or after the %c, so we need to
   166→	// figure out the correct index to insert the CSS into
   167→	let index = 0;
   168→	let lastC = 0;
   169→	args[0].replace(/%[a-zA-Z%]/g, match => {
   170→		if (match === '%%') {
   171→			return;
   172→		}
   173→		index++;
      →…
   194→/**
   195→ * Save `namespaces`.
   196→ *
   197→ * @param {String} namespaces
   198→ * @api private
   199→ */
   200→function save(namespaces) {
   201→	try {
   202→		if (namespaces) {
   203→			exports.storage.setItem('debug', namespaces);
   204→		} else {
   205→			exports.storage.removeItem('debug');
   206→		}
   207→	} catch (error) {
   208→		// Swallow
   209→		// XXX (@Qix-) should we be logging these?
   210→	}
   211→}
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→function load() {
   220→	let r;
   221→	try {
   222→		r = exports.storage.getItem('debug') || exports.storage.getItem('DEBUG') ;
   223→	} catch (error) {
   224→		// Swallow
   225→		// XXX (@Qix-) should we be logging these?
   226→	}
   227→
   228→	// If debug isn't set in LS, and we're in Electron, try to load $DEBUG
   229→	if (!r && typeof process !== 'undefined' && 'env' in process) {
   230→		r = process.env.DEBUG;
   231→	}
   232→
   233→	return r;
   234→}
   236→/**
   237→ * Localstorage attempts to return the localstorage.
   238→ *
   239→ * This is necessary because safari throws
   240→ * when a user disables cookies/localstorage
   241→ * and you attempt to access it.
   242→ *
   243→ * @return {LocalStorage}
   244→ * @api private
   245→ */
   246→
   247→function localstorage() {
   248→	try {
   249→		// TVMLKit (Apple TV JS Runtime) does not have a window object, just localStorage in the global context
   250→		// The Browser also has localStorage in the global context.
   251→		return localStorage;
   252→	} catch (error) {
   253→		// Swallow
   254→		// XXX (@Qix-) should we be logging these?
   255→	}
   256→}
common.js
     2→/**
     3→ * This is the common logic for both the Node.js and web browser
     4→ * implementations of `debug()`.
     5→ */
     6→
     7→function setup(env) {
     8→	createDebug.debug = createDebug;
     9→	createDebug.default = createDebug;
    10→	createDebug.coerce = coerce;
    11→	createDebug.disable = disable;
    12→	createDebug.enable = enable;
    13→	createDebug.enabled = enabled;
    14→	createDebug.humanize = require('ms');
    15→	createDebug.destroy = destroy;
    16→
    17→	Object.keys(env).forEach(key => {
    18→		createDebug[key] = env[key];
    19→	});
    20→
    21→	/**
    22→	* The currently active debug mode names, and names to skip.
    23→	*/
    24→
    25→	createDebug.names = [];
    26→	createDebug.skips = [];
    27→
    28→	/**
    29→	* Map of special "%n" handling functions, for the debug "format" argument.
    30→	*
    31→	* Valid key names are a single, lower or upper-case letter, i.e. "n" and "N".
      →…
node.js
   151→/**
   152→ * Is stdout a TTY? Colored output is enabled when `true`.
   153→ */
   154→
   155→function useColors() {
   156→	return 'colors' in exports.inspectOpts ?
   157→		Boolean(exports.inspectOpts.colors) :
   158→		tty.isatty(process.stderr.fd);
   159→}
   161→/**
   162→ * Adds ANSI color escape codes if enabled.
   163→ *
   164→ * @api public
   165→ */
   166→
   167→function formatArgs(args) {
   168→	const {namespace: name, useColors} = this;
   169→
   170→	if (useColors) {
   171→		const c = this.color;
   172→		const colorCode = '\u001B[3' + (c < 8 ? c : '8;5;' + c);
   173→		const prefix = `  ${colorCode};1m${name} \u001B[0m`;
   174→
   175→		args[0] = prefix + args[0].split('\n').join('\n' + prefix);
   176→		args.push(colorCode + 'm+' + module.exports.humanize(this.diff) + '\u001B[0m');
   177→	} else {
   178→		args[0] = getDate() + name + ' ' + args[0];
   179→	}
   180→}
   182→function getDate() {
   183→	if (exports.inspectOpts.hideDate) {
   184→		return '';
   185→	}
   186→	return new Date().toISOString() + ' ';
   187→}
   189→/**
   190→ * Invokes `util.formatWithOptions()` with the specified arguments and writes to stderr.
   191→ */
   192→
   193→function log(...args) {
   194→	return process.stderr.write(util.formatWithOptions(exports.inspectOpts, ...args) + '\n');
   195→}
   197→/**
   198→ * Save `namespaces`.
   199→ *
   200→ * @param {String} namespaces
   201→ * @api private
   202→ */
   203→function save(namespaces) {
   204→	if (namespaces) {
   205→		process.env.DEBUG = namespaces;
   206→	} else {
   207→		// If you set a process.env field to null or undefined, it gets cast to the
   208→		// string 'null' or 'undefined'. Just delete instead.
   209→		delete process.env.DEBUG;
   210→	}
   211→}
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→
   220→function load() {
   221→	return process.env.DEBUG;
   222→}
   224→/**
   225→ * Init logic for `debug` instances.
   226→ *
   227→ * Create a new `inspectOpts` object in case `useColors` is set
   228→ * differently for a particular `debug` instance.
   229→ */
   230→
   231→function init(debug) {
   232→	debug.inspectOpts = {};
   233→
   234→	const keys = Object.keys(exports.inspectOpts);
   235→	for (let i = 0; i < keys.length; i++) {
   236→		debug.inspectOpts[keys[i]] = exports.inspectOpts[keys[i]];
   237→	}
   238→}
