tests/snapshots/snapshots__budget_debug_src_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3990 tokens)

browser.js
   115→function useColors() {
   116→	// NB: In an Electron preload script, document will be defined but not fully
   117→	// initialized. Since we know we're in Chrome, we'll just detect this case
   118→	// explicitly
   119→	if (typeof window !== 'undefined' && window.process && (window.process.type === 'renderer' || window.process.__nwjs)) {
   120→		return true;
   121→	}
   122→
   123→	// Internet Explorer and Edge do not support colors.
   124→	if (typeof navigator !== 'undefined' && navigator.userAgent && navigator.userAgent.toLowerCase().match(/(edge|trident)\/(\d+)/)) {
   125→		return false;
   126→	}
   127→
   128→	let m;
   129→
   130→	// Is webkit? http://stackoverflow.com/a/16459606/376773
   131→	// document is undefined in react-native: https://github.com/facebook/react-native/pull/1632
   132→	// eslint-disable-next-line no-return-assign
   133→	return (typeof document !== 'undefined' && document.documentElement && document.documentElement.style && document.documentElement.style.WebkitAppearance) ||
   134→		// Is firebug? http://stackoverflow.com/a/398120/376773
   135→		(typeof window !== 'undefined' && window.console && (window.console.firebug || (window.console.exception && window.console.table))) ||
   136→		// Is firefox >= v31?
   137→		// https://developer.mozilla.org/en-US/docs/Tools/Web_Console#Styling_messages
   138→		(typeof navigator !== 'undefined' && navigator.userAgent && (m = navigator.userAgent.toLowerCase().match(/firefox\/(\d+)/)) && parseInt(m[1], 10) >= 31) ||
   139→		// Double check webkit in userAgent just in case we are in a worker
   140→		(typeof navigator !== 'undefined' && navigator.userAgent && navigator.userAgent.toLowerCase().match(/applewebkit\/(\d+)/));
   141→}
   143→/**
   144→ * Colorize log arguments if enabled.
   145→ *
   146→ * @api public
   147→ */
   148→
   149→function formatArgs(args) {
   150→	args[0] = (this.useColors ? '%c' : '') +
   151→		this.namespace +
   152→		(this.useColors ? ' %c' : ' ') +
   153→		args[0] +
   154→		(this.useColors ? '%c ' : ' ') +
   155→		'+' + module.exports.humanize(this.diff);
   156→
   157→	if (!this.useColors) {
   158→		return;
   159→	}
   160→
   161→	const c = 'color: ' + this.color;
   162→	args.splice(1, 0, c, 'color: inherit');
   163→
   164→	// The final "%c" is somewhat tricky, because there could be other
   165→	// arguments passed either before or after the %c, so we need to
   166→	// figure out the correct index to insert the CSS into
   167→	let index = 0;
   168→	let lastC = 0;
   169→	args[0].replace(/%[a-zA-Z%]/g, match => {
   170→		if (match === '%%') {
   171→			return;
   172→		}
   173→		index++;
   174→		if (match === '%c') {
   175→			// We only are interested in the *last* %c
   176→			// (the user may have provided their own)
   177→			lastC = index;
   178→		}
   179→	});
   180→
   181→	args.splice(lastC, 0, c);
   182→}
   194→/**
   195→ * Save `namespaces`.
   196→ *
   197→ * @param {String} namespaces
   198→ * @api private
   199→ */
   200→function save(namespaces) {
   201→	try {
   202→		if (namespaces) {
   203→			exports.storage.setItem('debug', namespaces);
   204→		} else {
   205→			exports.storage.removeItem('debug');
   206→		}
   207→	} catch (error) {
   208→		// Swallow
   209→		// XXX (@Qix-) should we be logging these?
   210→	}
   211→}
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→function load() {
   220→	let r;
   221→	try {
   222→		r = exports.storage.getItem('debug') || exports.storage.getItem('DEBUG') ;
   223→	} catch (error) {
   224→		// Swallow
   225→		// XXX (@Qix-) should we be logging these?
   226→	}
   227→
   228→	// If debug isn't set in LS, and we're in Electron, try to load $DEBUG
   229→	if (!r && typeof process !== 'undefined' && 'env' in process) {
   230→		r = process.env.DEBUG;
   231→	}
   232→
   233→	return r;
   234→}
   236→/**
   237→ * Localstorage attempts to return the localstorage.
   238→ *
   239→ * This is necessary because safari throws
   240→ * when a user disables cookies/localstorage
   241→ * and you attempt to access it.
   242→ *
   243→ * @return {LocalStorage}
   244→ * @api private
   245→ */
   246→
   247→function localstorage() {
   248→	try {
   249→		// TVMLKit (Apple TV JS Runtime) does not have a window object, just localStorage in the global context
   250→		// The Browser also has localStorage in the global context.
   251→		return localStorage;
   252→	} catch (error) {
   253→		// Swallow
   254→		// XXX (@Qix-) should we be logging these?
   255→	}
   256→}

common.js
     2→/**
     3→ * This is the common logic for both the Node.js and web browser
     4→ * implementations of `debug()`.
     5→ */
     6→
     7→function setup(env) {
     8→	createDebug.debug = createDebug;
     9→	createDebug.default = createDebug;
    10→	createDebug.coerce = coerce;
    11→	createDebug.disable = disable;
    12→	createDebug.enable = enable;
    13→	createDebug.enabled = enabled;
    14→	createDebug.humanize = require('ms');
    15→	createDebug.destroy = destroy;
    16→
    17→	Object.keys(env).forEach(key => {
    18→		createDebug[key] = env[key];
    19→	});
    20→
    21→	/**
    22→	* The currently active debug mode names, and names to skip.
    23→	*/
    24→
    25→	createDebug.names = [];
    26→	createDebug.skips = [];
    27→
    28→	/**
    29→	* Map of special "%n" handling functions, for the debug "format" argument.
    30→	*
    31→	* Valid key names are a single, lower or upper-case letter, i.e. "n" and "N".
    32→	*/
    33→	createDebug.formatters = {};
    34→
    35→	/**
    36→	* Selects a color for a debug namespace
    37→	* @param {String} namespace The namespace string for the debug instance to be colored
    38→	* @return {Number|String} An ANSI color code for the given namespace
    39→	* @api private
    40→	*/
    41→	function selectColor(namespace) {
    42→		let hash = 0;
    43→
    44→		for (let i = 0; i < namespace.length; i++) {
    45→			hash = ((hash << 5) - hash) + namespace.charCodeAt(i);
    46→			hash |= 0; // Convert to 32bit integer
    47→		}
    48→
    49→		return createDebug.colors[Math.abs(hash) % createDebug.colors.length];
    50→	}
    51→	createDebug.selectColor = selectColor;
    52→
    53→	/**
    54→	* Create a debugger with the given `namespace`.
    55→	*
    56→	* @param {String} namespace
    57→	* @return {Function}
    58→	* @api public
    59→	*/
    60→	function createDebug(namespace) {
    61→		let prevTime;
    62→		let enableOverride = null;
    63→		let namespacesCache;
    64→		let enabledCache;
    65→
    66→		function debug(...args) {
    67→			// Disabled?
    68→			if (!debug.enabled) {
    69→				return;
    70→			}
    71→
    72→			const self = debug;
    73→
    74→			// Set `diff` timestamp
    75→			const curr = Number(new Date());
    76→			const ms = curr - (prevTime || curr);
    77→			self.diff = ms;
    78→			self.prev = prevTime;
    79→			self.curr = curr;
    80→			prevTime = curr;
    81→
    82→			args[0] = createDebug.coerce(args[0]);
    83→
    84→			if (typeof args[0] !== 'string') {
    85→				// Anything else let's inspect with %O
    86→				args.unshift('%O');
    87→			}
    88→
    89→			// Apply any `formatters` transformations
    90→			let index = 0;
    91→			args[0] = args[0].replace(/%([a-zA-Z%])/g, (match, format) => {
    92→				// If we encounter an escaped % then don't increase the array index
    93→				if (match === '%%') {
    94→					return '%';
    95→				}
    96→				index++;
    97→				const formatter = createDebug.formatters[format];
    98→				if (typeof formatter === 'function') {
    99→					const val = args[index];
   100→					match = formatter.call(self, val);
   101→
   102→					// Now we need to remove `args[index]` since it's inlined in the `format`
   103→					args.splice(index, 1);
   104→					index--;
   105→				}
   106→				return match;
   107→			});
   108→
   109→			// Apply env-specific formatting (colors, etc.)
   110→			createDebug.formatArgs.call(self, args);
   111→
   112→			const logFn = self.log || createDebug.log;
   113→			logFn.apply(self, args);
   114→		}
   115→
   116→		debug.namespace = namespace;
   117→		debug.useColors = createDebug.useColors();
   118→		debug.color = createDebug.selectColor(namespace);
   119→		debug.extend = extend;
   120→		debug.destroy = createDebug.destroy; // XXX Temporary. Will be removed in the next major release.
   121→
   122→		Object.defineProperty(debug, 'enabled', {
   123→			enumerable: true,
   124→			configurable: false,
   125→			get: () => {
   126→				if (enableOverride !== null) {
   127→					return enableOverride;
   128→				}
   129→				if (namespacesCache !== createDebug.namespaces) {
   130→					namespacesCache = createDebug.namespaces;
   131→					enabledCache = createDebug.enabled(namespace);
   132→				}
   133→
   134→				return enabledCache;
   135→			},
   136→			set: v => {
   137→				enableOverride = v;
   138→			}
   139→		});
   140→
   141→		// Env-specific initialization logic for debug instances
   142→		if (typeof createDebug.init === 'function') {
   143→			createDebug.init(debug);
   144→		}
   145→
   146→		return debug;
   147→	}
   148→
   149→	function extend(namespace, delimiter) {
      →…

node.js
   151→/**
   152→ * Is stdout a TTY? Colored output is enabled when `true`.
   153→ */
   154→
   155→function useColors() {
   156→	return 'colors' in exports.inspectOpts ?
   157→		Boolean(exports.inspectOpts.colors) :
   158→		tty.isatty(process.stderr.fd);
   159→}
   161→/**
   162→ * Adds ANSI color escape codes if enabled.
   163→ *
   164→ * @api public
   165→ */
   166→
   167→function formatArgs(args) {
   168→	const {namespace: name, useColors} = this;
   169→
   170→	if (useColors) {
   171→		const c = this.color;
   172→		const colorCode = '\u001B[3' + (c < 8 ? c : '8;5;' + c);
   173→		const prefix = `  ${colorCode};1m${name} \u001B[0m`;
   174→
   175→		args[0] = prefix + args[0].split('\n').join('\n' + prefix);
   176→		args.push(colorCode + 'm+' + module.exports.humanize(this.diff) + '\u001B[0m');
   177→	} else {
   178→		args[0] = getDate() + name + ' ' + args[0];
   179→	}
   180→}
   182→function getDate() {
   183→	if (exports.inspectOpts.hideDate) {
   184→		return '';
   185→	}
   186→	return new Date().toISOString() + ' ';
   187→}
   189→/**
   190→ * Invokes `util.formatWithOptions()` with the specified arguments and writes to stderr.
   191→ */
   192→
   193→function log(...args) {
   194→	return process.stderr.write(util.formatWithOptions(exports.inspectOpts, ...args) + '\n');
   195→}
   197→/**
   198→ * Save `namespaces`.
   199→ *
   200→ * @param {String} namespaces
   201→ * @api private
   202→ */
   203→function save(namespaces) {
   204→	if (namespaces) {
   205→		process.env.DEBUG = namespaces;
   206→	} else {
   207→		// If you set a process.env field to null or undefined, it gets cast to the
   208→		// string 'null' or 'undefined'. Just delete instead.
   209→		delete process.env.DEBUG;
   210→	}
   211→}
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→
   220→function load() {
   221→	return process.env.DEBUG;
   222→}
   224→/**
   225→ * Init logic for `debug` instances.
   226→ *
   227→ * Create a new `inspectOpts` object in case `useColors` is set
   228→ * differently for a particular `debug` instance.
   229→ */
   230→
   231→function init(debug) {
   232→	debug.inspectOpts = {};
   233→
   234→	const keys = Object.keys(exports.inspectOpts);
   235→	for (let i = 0; i < keys.length; i++) {
   236→		debug.inspectOpts[keys[i]] = exports.inspectOpts[keys[i]];
   237→	}
   238→}
